--- a/android_app/app/src/main/res/values/strings.xml
+++ b/android_app/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="wallpaperpreview">WallpaperPreview</string>
     <string name="saveconfig">SaveConfig</string>
     <string name="applyConfig">Apply Configuration</string>
+    <string name="edit_wallpaper">Edit selected wallpaper</string>
     <string name="addWallpaper">Add Wallpaper</string>
     <string name="tags">Tags</string>
     <string name="sync">Sync</string>
